# dotnet-swarm

./: .gitignore  GEMINI.md  IMPLEMENTATION-PLAN-v2.md  README.md  config.yaml  dashboard.py  main.py  pyproject.toml  requirements.txt  ruflo_start.py  run-migration-with-dashboard.sh
.migration-skills/dotnet-clean-arch-cqrs/: SKILL.md
.migration-skills/dotnet-docker-setup/: SKILL.md
.migration-skills/dotnet-msal-update/: SKILL.md
.migration-skills/dotnet-startup-migration/: SKILL.md
.migration-skills/dotnet-webconfig-to-appsettings/: SKILL.md
.omc/skills/: dotnet-namespace-replacement.md  dotnet-oracle-ef6-migration.md
.omx/skills/: dotnet-ddd-value-objects.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.quint/: project.yaml
.quint/decisions/: dec_adv01_parse.md
.quint/problems/: prob_adv01_parse.md
app/agents/: __init__.py  documenter.py  phase1_migrator.py  phase2_modernizer.py  (+4 more)
config/: safety.yaml
docs/: ARCHITECTURE.md  SOP.md
state/: current_state.json  migration.db
tests/: test_adapter_mock.py  test_graph.py  test_harness_adapter.py  test_imports.py  test_migration_skills.py  test_persistence.py  test_planner.py  test_polish.py  test_reporter.py  test_ruflo_mcp.py  test_safety.py  test_skills_sync.py  test_sop.py  test_state.py  test_tool_adapter.py  test_worker.py
(+83 files in other folders)
