[project]
name = "dotnet-migration-swarm"
version = "1.3.0"
description = ".NET Migration Swarm - LangGraph + Ruflo + GitNexus + Vibekanban + Retry + Auto Skill"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "typer>=0.15",
    "pyyaml",
    "requests",
    "loguru",
    "tenacity",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
